--- a/src/components/alg/alg-train/fatin/pages/elem-fatin-10.html
+++ b/src/components/alg/alg-train/fatin/pages/elem-fatin-10.html
@@ -6,7 +6,6 @@
   <h4>Деревья поиска для собеседования в Яндекс за 2 часа и 15 минут</h4>
 
   <p><a href="https://www.youtube.com/@fatin.maksim/videos">youtube Максим Фатин</a></p>
-  <p><a href="https://algocode.io/">https://algocode.io/</a></p>
   <p><a href="https://tskills.ru/algo">https://tskills.ru/algo</a></p>
 </article>
 
@@ -457,6 +456,8 @@ bool minMaxLeaves(TreeNode *root, int minVal, int maxVal) {
 <article class="article">
   <div class="anchor" id="bst3"></div>
   <h3>Задача 2. Валидация дерева поиска</h3>
+
+  <h4>Leetcode 98. Validate Binary Search Tree</h4>
 
   <p>Дан корень бинарного дерева. Нужно проверить является ли дерево правильным бинарным деревом поиска</p>
 
