--- a/src/components/front/front-vacancy/pages/elem-interview.html
+++ b/src/components/front/front-vacancy/pages/elem-interview.html
@@ -11,6 +11,7 @@
 
   <div>
     <p><a href="#links">links</a></p>
+    <p><a href="#common">Общие вопросы</a></p>
     <p><a href="#interview">Собеседование</a></p>
   </div>
 
@@ -30,6 +31,61 @@
     <a href="https://gcoder.ru/kak-ponyat-chto-vy-gotovy-zanyat-poziciyu-front-end-razrabotchika/">https://gcoder.ru/</a>
     Как понять, что вы готовы занять позицию front-end разработчика
   </p>
+</article>
+
+
+<!-- Общие вопросы -->
+<article class="article">
+  <div class="anchor" id="common"></div>
+  <h2>Общие вопросы</h2>
+
+  <ol>
+    <li>
+      <h4>Расскажите о себе</h4>
+      <p><strong>Что хочет услышать работодатель</strong>. Главное, что интересует работодателя - ваш профессиональный опыт и навыки.</p>
+      <p><strong>Что отвечать</strong>. Расскажите какое у вас образование, в каких компаниях вы раньше работаи, какие у вас были обязанности, готовы ли вы к командировкам. Это беглый обзор всего, о чем с вами можно поговорить в ближайший час. Время на ответ 2-3 минуты.</p>
+      <p><strong>Совет</strong>. Не нужно рассказывать свою биографию: про учебу в школе, про родителей и семью. Скажите о том опыте работы и знаниях, которые нужны для конкретной вакансии.</p>
+    </li>
+    <li>
+      <h4>На какой уровень зарплаты вы рассчитываете</h4>
+      <p><strong>Что хочет услышать работодатель</strong>. Ему важно понять, совпадают ли ваши ожидания с его бюджетом на эту вакансию</p>
+      <p><strong>Что отвечать</strong>. Есть два варианта. Первый. Назовите конкретную цифру если твердо решили что за меньшие деньги работать не готовы. При этом уточните: это сумма на руки или до вычета налогов. Второй. Спросите какая зарплатная вилка на этой позиции. Затем назовите сумму ближе к верхней границе.</p>
+      <p>Совет. Работодателю важно понять какой уровень зарплаты комфортен. Если нанять сотрудника на более низкую ставку, он долго не проработает.</p>
+    </li>
+    <li>
+      <h4>Расскажите о своей последней работе</h4>
+      <p><strong>Что хочет услышать работодатель</strong>. Похожие ли обязанности вы выполняли на предыдущем месте. Задумывались ли вы, какую пользу приносите компании.</p>
+      <p><strong>Что отвечать</strong>. Расскажите какой был выш обычный рабочий день. С кем из сотрудников и как взаимодействовали, за что отвечали, опишите основные задачи. Дайте понять что вы делали работу хорошо и можете это доказать.</p>
+      <p><strong>Совет</strong>. Расскажите про ваши инициативы и рациональные предложения на прошлой работе, какие они были и удалось ли их внедрить</p>
+    </li>
+    <li>
+      <h4>Почему вы ушли с последнего места работы</h4>
+      <p><strong>Что хочет услышать работодатель</strong>. Как вы расстаетесь с работодателями и что будете говорить о компании, начальнике, коллективе, если уйдете</p>
+      <p><strong>Что отвечать</strong>. Говорите о последней работе с достоинством, отмечая как минусы так и плюсы. Расскажите какие уроки вам удалось вынести из опыта.</p>
+      <p><strong>Совет</strong>. Никогда не говорите о своем работодателе плохо. Говорите либо хорошо, либо ничего. Лучше сказать что ушел потому что захотелось роста. Компания была небольшая и я уже достиг своего потолка. В компании был хороший коллектив и начальство, но задачи - однообразные. Решил уйти, когда понял, что готов попробовать что-то новое</p>
+    </li>
+    <li>
+      <h4>Расскажите об ошибках, которые вы допускали на работе</h4>
+    </li>
+    <li>
+      <h4>Почему вы откликнулись на нашу вакансию</h4>
+    </li>
+    <li>
+      <h4>Что для вас важно в работе</h4>
+    </li>
+    <li>
+      <h4>Как вы видите свое профессиональное будущее</h4>
+    </li>
+    <li>
+      <h4>Что будете делать, если...</h4>
+    </li>
+    <li>
+      <h4>Что такое редуктор/подшипник/пневмоцилиндр</h4>
+    </li>
+    <li>
+      <h4>Как вы оцениваете свое состояние здоровья? Были ли у вас травмы?</h4>
+    </li>
+  </ol>
 </article>
 
 
