--- a/src/components/code/code-c/pages/elem-c.html
+++ b/src/components/code/code-c/pages/elem-c.html
@@ -5,7 +5,15 @@
 <article class="article">
   <h2>Содержание</h2>
 
-  <p><a href="#direct">Директивы препроцессора</a></p>
+  <p><a href="#dir">Директивы препроцессора</a></p>
+  <ol>
+    <li><a href="#dir1">#include</a></li>
+    <li><a href="#dir2">#define</a></li>
+    <li><a href="#dir3">#undef</a></li>
+    <li><a href="#dir4">#ifdef #endif</a></li>
+    <li><a href="#dir5">#ifndef #endif</a></li>
+    <li><a href="#dir6">#if #elif #else #endif</a></li>
+  </ol>
   <p><a href="#var">Переменные</a></p>
   <ol>
     <li><a href="#var1">Объявление переменной</a></li>
@@ -14,15 +22,20 @@
     <li><a href="#var4">Массив переменных</a></li>
     <li><a href="#var5">Константа const</a></li>
     <li><a href="#var6">Перечисление констант enum</a></li>
+    <li><a href="#var7">Создание константного типа</a></li>
+    <li><a href="#var8">Размер переменной sizeof()</a></li>
   </ol>
+  <p><a href="#point">Указатели</a></p>
+  <p><a href="#flag">Флаги и маски</a></p>
   <p><a href="#types">Типы данных</a></p>
   <ol>
     <li><a href="#types1">Символьные типы char, wchar_t</a></li>
     <li><a href="#types2">Целочисленные типы (integer types)</a></li>
-    <li><a href="#types2">Суффиксы целочисленных типов</a></li>
-    <li><a href="#types3">Платформонезависимые типы данных</a></li>
-    <li><a href="#types4">Вещественные типы данных float, double</a></li>
-    <li><a href="#types5">Тип без значения void</a></li>
+    <li><a href="#types3">Суффиксы целочисленных типов</a></li>
+    <li><a href="#types4">Платформонезависимые типы данных</a></li>
+    <li><a href="#types5">Вещественные типы данных float, double</a></li>
+    <li><a href="#types6">Тип без значения void</a></li>
+    <li><a href="#types7">Создание пользовательского типа typedef</a></li>
     <li><a href="#sizeof">Размер типа данных sizeof()</a></li>
     <li>
       <a href="#types6">Преобразование типов</a>
@@ -32,7 +45,6 @@
       </ol>
     </li>
   </ol>
-  <p><a href="#point">Указатели</a></p>
   <p><a href="#lex">Лексемы языка Си</a></p>
   <ol>
     <li><a href="#lex1">Алфавит языка Си</a></li>
@@ -88,18 +100,88 @@
 
 <!-- Директивы препроцессора -->
 <article class="article">
-  <div class="anchor" id="direct"></div>
+  <div class="anchor" id="dir"></div>
   <h3>Директивы препроцессора</h3>
 
   <p>Когда компилятор смотрит исходный код, то первым делом он выполняет директивы препроцессора.</p>
   <p>Каждая директива размещается на одной строке и начинается символом #.</p>
   <p>Концом директивы является перевод на новую строку. Точка с запятой (;) не ставится.</p>
+</article>
 
-  <h4>Директива include</h4>
-  <p>Директива include определяет какие файлы надо включить в данном месте в текст программы. Компилятор заменяет директиву include на текст программы из этого файла</p>
 
-  <h4>Директива define</h4>
-  <h4>Директива undefine</h4>
+<!-- #include -->
+<article class="article">
+  <div class="anchor" id="dir1"></div>
+  <h3>#include</h3>
+
+  <p>Директива #include определяет какие файлы надо включить в данном месте в текст программы. Компилятор заменяет директиву #include на текст программы из этого файла</p>
+  <code>#include ИМЯ_ФАЙЛА</code>
+  <p>Подключим файл заголовков стандартной библиотеки ввода-вывода</p>
+  <code>#include &lt;stdio.h&gt;</code>
+</article>
+
+
+<!-- #define -->
+<article class="article">
+  <div class="anchor" id="dir2"></div>
+  <h3>#define</h3>
+
+  <p>Директива препроцессора #define может быть использована для определения констант</p>
+  <code>#define ИМЯ_КОНСТАНТЫ ЗНАЧЕНИЕ</code>
+  <p>Директива #define должна быть в самом начале файла с кодом программы. Все определенные таким образом константы будут заменены в коде программы препроцессором еще до ее компиляции.</p>
+  <p>Определим целочисленную константу</p>
+  <code>#define STO 100</code>
+  <p>Определим вещественнуб константу</p>
+  <code>#define PI 3.1415</code>
+  <p>Определим строковую константу</p>
+  <code>#define VERSION "version 2"</code>
+</article>
+
+
+<!-- #undef -->
+<article class="article">
+  <div class="anchor" id="dir3"></div>
+  <h3>#undef</h3>
+
+  <p>Константа, определенная директивой #define, может быть разопределена директивой #undef</p>
+  <code>#undef STO</code>
+  <code>#undef PI</code>
+  <code>#undef VERSION</code>
+</article>
+
+
+<!-- #ifdef #endif-->
+<article class="article">
+  <div class="anchor" id="dir4"></div>
+  <h3>#ifdef #endif</h3>
+
+  <p>Условная директива препроцессора #ifdef может быть использована для проверки того, существует ли определение конкретной константы. Директива #ifdef также называется макросом. После этого можно использовать директиву #define для определения константы.</p>
+  <p>Директива #ifdef всегда должна заканчиваться директивой #endif</p>
+  <p>Макрос может определить операционную систему компьютера. В windows определена константа _WIN32, а в LINUX - linux.</p>
+<pre>
+#ifdef _WIN32
+#define SYSTEM "Windows"
+#endif
+</pre>
+</article>
+
+
+<!-- #ifndef #endif -->
+<article class="article">
+  <div class="anchor" id="dir5"></div>
+  <h3>#ifndef #endif</h3>
+
+  <p>Если константа не определена, то это можно проверить с помощью директивы #ifndef</p>
+  <p>Директива #ifndef всегда должна заканчиваться директивой #endif</p>
+</article>
+
+
+<!-- #if #elif #else #endif -->
+<article class="article">
+  <div class="anchor" id="dir6"></div>
+  <h3>#if #elif #else #endif</h3>
+
+  <p>Директива #if всегда должна заканчиваться директивой #endif</p>
 </article>
 
 
@@ -295,6 +377,71 @@
 </article>
 
 
+<!-- Размер переменной sizeof() -->
+<article class="article">
+  <div class="anchor" id="var8"></div>
+  <h3>Размер переменной sizeof()</h3>
+
+  <p><strong>Размер переменной</strong> можно узнать с помощью оператора sizeof(). Оператор sizeof() возвращает целое число - <strong>количество байт</strong> для хранения переменной. Оператор sizeof() принимает <strong>переменную</strong>, которую пишут в скобках или без них</p>
+  <code>int a = 100;</code>
+  <code>printf("%d", sizeof(a)); // 4</code>
+  <code>printf("%d", sizeof a); // 4</code>
+
+  <p><strong>Размер массива</strong> из переменных одного типа вычисляется умножением количества перменных в массиве на размер типа данных</p>
+  <code>sizeof(int[3]); // 4 * 3 = 12 bytes</code>
+
+  <p><strong>Размер структуры данных</strong> из переменных разного типа может быть больше чем сумма размеров для каждой переменной из этой структуры. Обычно операционная система считывает данные <strong>словами по 4 байта</strong>. Поэтому при выделении памяти добавляют необходимое число байт до 4. Правильный размер структуры может показать только оператор sizeof()</p>
+  <code>struct {int score; char grade;} result;</code>
+  <code>printf("%d", sizeof result); // 8</code>
+</article>
+
+
+<!-- Указатели -->
+<article class="article">
+  <div class="anchor" id="point"></div>
+  <h3>Указатели</h3>
+
+  <p>Указатель - это переменная, хранящая адрес в оперативой памяти компьютера. Это может быть адрес любой переменной, массива, структуры, функции и т.д.</p>
+  <p>Указатели используются для оптимизации выполнения программы и динамического выделения блоков памяти</p>
+  <p>Адрес переменной - это адрес в оперативной памяти компьютера, где записано значение этой переменной</p>
+  <p>Напрямую обращаться из программы к любому адресу в оперативной памяти нельзя. Это может делать только операционная система. Операционная система резервирует диапазон свободных ячеек памяти для своей работы и динамически выделяет блоки памяти для работы запущенных программ</p>
+  <p>С помощью указателей мы можем обратиться к адресу, где хранится значение переменной. При попытке обратиться к адресу, не выделенному для нашей программы, произойдет крах и программа завершится с ошибкой.</p>
+  <p>Указатель объявляется как обычная переменная. Сначала указывается тип указателя. Тип указателя должен быть таким же как у переменной, адрес которой он будет хранить. После типа ставится знак *. После знака * пишется имя указателя.</p>
+  <p>При объявлении указателя рекомендуется его сразу же инициализировать значением NULL, если он не инициализируется другим значением</p>
+  <code>int num = 10;</code>
+  <code>int *pnum = NULL;</code>
+  <p>Для получения адреса переменной перед ее именем нужно указать знак &. Адрес можно хранить только в указателе</p>
+  <code>*pnum = &amp;num;</code>
+  <p>Теперь указатель pnum хранит адрес переменной num. И может получать и изменять ее значение.</p>
+
+  <h4>Указатель на указатель</h4>
+  <p>Указатель это переменная. Как и любая переменная, указатель имеет свой адрес в памяти</p>
+  <code>int *p = NULL;</code>
+
+  <h4>Разименование</h4>
+  <p>Имея указатель с адресом, мы можем получить значение переменной с помощью оператора *</p>
+  <p>Операция получения значения переменной по ее адресу называеся <strong>разименование</strong></p>
+  <code>int num = 30;</code>
+  <code>int *pnum = &amp;num;</code>
+  <p>Переменная num и указатель pnum указывают на один адрес. Благодаря одному адресу, указатель и переменная имеют общий доступ к ячейке памяти со значением переменной</p>
+</article>
+
+
+<!-- Флаги и маски -->
+<article class="article">
+  <div class="anchor" id="flag"></div>
+  <h3>Флаги и маски</h3>
+
+  <p>Наиболее распространенный вариант использования битовых операций это управление битовым полем, содержащим набор булевых флагов.</p> <p>Тип char занимает 1 байт памяти. В одном байте можно хранить 8 флагов. Это эффективнее чем каждый флаг хранить в отдельной переменной. Например, если в переменной типа char хранить только один флаг, то для 8 флагов потребуется уже 8 байт</p>
+  <p>Исходное значение флагов может быть установлено с помощью десятичного числа, которое имеет единицы в тех битах, в которых нужно включить флаг</p>
+  <p>Установим флаги в 1 и 4 разряд</p>
+  <code>char flag = 9; // 0000 1001</code>
+
+  <p>Тип short занимает 2 байта памяти. В двух байтах можно хранить 16 флагов.</p>
+  <p>Тип int занимает 4 байта памяти. В четырех байтах можно хранить 32 флага.</p>
+</article>
+
+
 <!-- Типы данных -->
 <article class="article">
   <div class="anchor" id="types"></div>
@@ -364,7 +511,7 @@
 
 <!-- Суффиксы целочисленных типов -->
 <article class="article">
-  <div class="anchor" id="types2"></div>
+  <div class="anchor" id="types3"></div>
   <h3>Суффиксы целочисленных типов</h3>
 
   <p>Целое число по умолчанию имеет тип int. При присвоении его другому типу произойдет преобразование к этому типу. С помощью суффикса можно явно указать тип целого числа.</p>
@@ -392,7 +539,7 @@
 
 <!-- Платформонезависимые типы данных -->
 <article class="article">
-  <div class="anchor" id="types3"></div>
+  <div class="anchor" id="types4"></div>
   <h3>Платформонезависимые типы данных</h3>
 
   <p>Начиная с С99 определены типы данных, в которых можно указать размер для различных целей. Они считаются платформонезависимыми.</p>
@@ -407,7 +554,7 @@
 
 <!-- Вещественные типы данных float, double -->
 <article class="article">
-  <div class="anchor" id="types4"></div>
+  <div class="anchor" id="types5"></div>
   <h3>Вещественные типы данных float, double</h3>
 
   <p>Модификатор длины: <strong>long</strong></p>
@@ -442,8 +589,20 @@
 
 <!-- Тип без значения void -->
 <article class="article">
-  <div class="anchor" id="types5"></div>
+  <div class="anchor" id="types6"></div>
   <h3>Тип без значения void</h3>
+</article>
+
+
+<!-- Создание пользовательского типа typedef -->
+<article class="article">
+  <div class="anchor" id="types7"></div>
+  <h3>Создание пользовательского типа typedef</h3>
+
+  <p>Чтобы сократить длинные названия типов, можно создать пользовательский тип с коротким именем</p>
+  <code>typedef unsigned short int USINT;</code>
+  <code>USINT a;</code>
+  <p>Объявили переменную a с типом unsigned short int</p>
 </article>
 
 
@@ -452,12 +611,8 @@
   <div class="anchor" id="sizeof"></div>
   <h3>Размер типа данных sizeof()</h3>
 
-  <p>Размер типа данных можно узнать с помощью оператора sizeof(). Оператор sizeof() принимает тип данных и возвращает количество байт.</p>
+  <p><strong>Размер типа данных</strong> можно узнать с помощью оператора sizeof(). Оператор sizeof() возвращает целое число - <strong>количество байт</strong> для хранения данного типа данных. Если в качестве аргумента передается <strong>тип данных</strong>, то он должен быть помещен в круглые скобки</p>
   <code>printf("%d", sizeof(int)); // 4</code>
-
-  <p>Так же можно узнать размер переменной. Оператор sizeof() принимает переменную и возвращает количество байт</p>
-  <code>int a = 100;</code>
-  <code>printf("%d", sizeof(a)); // 4</code>
 
   <h3>Минимальное и максимальное значение типа данных</h3>
   <p>Минимальное и максимальное значение типа данных можно узнать с помощью констант из заголовочного файла limits.h</p>
@@ -560,37 +715,6 @@
   <h4>Приведение double к float</h4>
   <code>float a = (float)0.1234567; // 0.123457</code>
   <p>Значение переменной типа double округляется в шестом знаке после запятой</p>
-</article>
-
-
-<!-- Указатели -->
-<article class="article">
-  <div class="anchor" id="point"></div>
-  <h3>Указатели</h3>
-
-  <p>Указатель - это переменная, хранящая адрес в оперативой памяти компьютера. Это может быть адрес любой переменной, массива, структуры, функции и т.д.</p>
-  <p>Указатели используются для оптимизации выполнения программы и динамического выделения блоков памяти</p>
-  <p>Адрес переменной - это адрес в оперативной памяти компьютера, где записано значение этой переменной</p>
-  <p>Напрямую обращаться из программы к любому адресу в оперативной памяти нельзя. Это может делать только операционная система. Операционная система резервирует диапазон свободных ячеек памяти для своей работы и динамически выделяет блоки памяти для работы запущенных программ</p>
-  <p>С помощью указателей мы можем обратиться к адресу, где хранится значение переменной. При попытке обратиться к адресу, не выделенному для нашей программы, произойдет крах и программа завершится с ошибкой.</p>
-  <p>Указатель объявляется как обычная переменная. Сначала указывается тип указателя. Тип указателя должен быть таким же как у переменной, адрес которой он будет хранить. После типа ставится знак *. После знака * пишется имя указателя.</p>
-  <p>При объявлении указателя рекомендуется его сразу же инициализировать значением NULL, если он не инициализируется другим значением</p>
-  <code>int num = 10;</code>
-  <code>int *pnum = NULL;</code>
-  <p>Для получения адреса переменной перед ее именем нужно указать знак &. Адрес можно хранить только в указателе</p>
-  <code>*pnum = &amp;num;</code>
-  <p>Теперь указатель pnum хранит адрес переменной num. И может получать и изменять ее значение.</p>
-
-  <h4>Указатель на указатель</h4>
-  <p>Указатель это переменная. Как и любая переменная, указатель имеет свой адрес в памяти</p>
-  <code>int *p = NULL;</code>
-
-  <h4>Разименование</h4>
-  <p>Имея указатель с адресом, мы можем получить значение переменной с помощью оператора *</p>
-  <p>Операция получения значения переменной по ее адресу называеся <strong>разименование</strong></p>
-  <code>int num = 30;</code>
-  <code>int *pnum = &amp;num;</code>
-  <p>Переменная num и указатель pnum указывают на один адрес. Благодаря одному адресу, указатель и переменная имеют общий доступ к ячейке памяти со значением переменной</p>
 </article>
 
 
@@ -789,23 +913,28 @@
   <div class="anchor" id="oper1"></div>
   <h3>Приоритет операций</h3>
 
+  <p><strong>Приоритет операций</strong> определяет порядок, в котором вычисляется значение выражения</p>
+  <p><strong>Ассоциативность операций</strong> определяет порядок тех операций, у которых одинаковый приоритет</p>
+
   <ol>
-    <li>() [] -> .</li>
-    <li>! ~ + - ++ -- & * (имя типа) sizeof</li>
+    <li>() вызов функции [] индекс массива -> указатель на структуру . член структуры</li>
+    <li>! не ~ битовое не + знак плюс - знак минус ++ инкремент -- декремент & адрес * указатель (имя типа) sizeof</li>
     <li>* / %</li>
-    <li>+ -</li>
+    <li>+ сложение - вычитание</li>
     <li>&lt;&lt; &gt;&gt;</li>
     <li>&lt; &lt;= &gt;= &gt;</li>
     <li>== !=</li>
-    <li>&</li>
-    <li>^</li>
-    <li>|</li>
+    <li>& битовое И</li>
+    <li>^ битовое исключающее И</li>
+    <li>| битовое ИЛИ</li>
     <li>&&</li>
     <li>||</li>
     <li>?:</li>
-    <li>= *= /= %= += -= &= ^= |= &lt;&lt;= &gt;&gt;=</li>
-    <li>,</li>
+    <li>= *= /= %= += -= &= ^= |= &lt;&lt;= &gt;&gt;= операции присваивания</li>
+    <li>, запятая</li>
   </ol>
+
+  <p>Операции с приоритетом 2,13,14,15 имеют ассоциативность справа налево. Все остальные - слева направо.</p>
 </article>
 
 
@@ -845,17 +974,39 @@
   <div class="anchor" id="oper4"></div>
   <h3>Битовые операции</h3>
 
-  <p>& поразрядное И</p>
-  <p>| поразрядное ИЛИ</p>
-  <p>^ поразрядное исключающее ИЛИ</p>
-  <p>~ поразрядное НЕ</p>
-  <p>&lt;&lt; сдвиг влево</p>
-  <p>&gt;&gt; сдвиг вправо</p>
-  <p>&= поразрядное И с присваиванием</p>
-  <p>|= поразрядное ИЛИ с присваиванием</p>
-  <p>^= поразрядное исключающее ИЛИ с присваиванием</p>
-  <p>&lt;&lt;= сдвиг влево с присваиванием</p>
-  <p>&gt;&gt; сдвиг вправо с присваиванием</p>
+  <p>Каждый байт состоит из 8 бит. Каждый бит состоит из одного значения 0 или 1. Байт записывается справа налево от менее значимого бита (LSB, Less Significant Bit) до более значимого бита (MSB, Most Significant Bit). Каждый байт может содержать десятичное число от 0 до 255</p>
+<pre>
+              MSB                         LSB
+Номер бита     8   7   6   5   4   3   2   1
+Значение      128 64  32  16   8   4   2   1  // 32+16+2=50
+Двоичный код   0   0   1   1   0   0   1   0  // 00110010
+</pre>
+
+  <h4>& поразрядное И</h4>
+  <p>Возвращает 1 если оба бита имеют значение 1, иначе возвращает 0</p>
+  <code>1010 & 1100 = 1000</code>
+
+  <h4>| поразрядное ИЛИ</h4>
+  <p>Возвращает 1 если хотя бы один бит имеет значение 1, иначе возвращает 0</p>
+  <code>1010 | 0101 = 1111</code>
+
+  <h4>^ поразрядное исключающее ИЛИ</h4>
+  <p>Возвращает 1 если только один бит имеет значение 1, иначе возвращает 0</p>
+  <code>1010 ^ 0100 = 1110</code>
+
+  <h4>~ поразрядное НЕ</h4>
+  <p>Возвращает 1 если ни один бит не имеет значение 1, иначе возвращает 0</p>
+  <code>1010 ~ 0011 = 0100</code>
+
+  <h4>&lt;&lt; битовый сдвиг влево</h4>
+  <p>Перемещает биты влево на заданное количество разрядов</p>
+  <code>0010 &lt;&lt; 2 = 1000</code>
+
+  <h4>&gt;&gt; битовый сдвиг вправо</h4>
+  <p>Перемещает биты вправо на заданное количество разрядов</p>
+  <code>1000 &gt;&gt; 2 = 0010</code>
+
+  <p>Битовые операции необходимы для программирования устройств с ограниченными ресурсами. Операция Исключающее ИЛИ позволяет менять значения двух переменных без создания третьей.</p>
 </article>
 
 
@@ -899,7 +1050,17 @@
   <div class="anchor" id="oper8"></div>
   <h3>Операции присваивания</h3>
 
-  <p>= *= /= %= += -= &= ^= |= &lt;&lt;= &gt;&gt;=</p>
+  <p>=</p>
+  <p>+=</p>
+  <p>-=</p>
+  <p>*=</p>
+  <p>/=</p>
+  <p>%=</p>
+  <p>&= поразрядное И с присваиванием</p>
+  <p>|= поразрядное ИЛИ с присваиванием</p>
+  <p>^= поразрядное исключающее ИЛИ с присваиванием</p>
+  <p>&lt;&lt;= сдвиг влево с присваиванием</p>
+  <p>&gt;&gt; сдвиг вправо с присваиванием</p>
 </article>
 
 
