--- a/src/components/front/front-edu/pages/elem-edu-dsr2024cpp.html
+++ b/src/components/front/front-edu/pages/elem-edu-dsr2024cpp.html
@@ -31,5 +31,6 @@
   <p><a href="dsr2024cpp/lec-6.html" class="js-dsr-lecture">Лекция 6 (5.11.2024)</a></p>
   <p><a href="dsr2024cpp/lec-7.html" class="js-dsr-lecture">Лекция 7 (11.11.2024)</a></p>
   <p><a href="dsr2024cpp/lec-8.html" class="js-dsr-lecture">Лекция 8 (18.11.2024)</a></p>
+  <p><a href="dsr2024cpp/lec-9.html" class="js-dsr-lecture">Лекция 9 (9.12.2024)</a></p>
 </article>
 
