--- a/src/components/front/front-edu/pages/elem-edu-dsr2023net.html
+++ b/src/components/front/front-edu/pages/elem-edu-dsr2023net.html
@@ -3,8 +3,13 @@
 
 <!-- Заголовок -->
 <article class="article">
-  <h2>Бесплатный онлайн курс .Net School
-    <br>(2 октября 2023 - 25 января 2024)</h2>
+  <h2>.Net School</h2>
+</article>
+
+
+<article class="article">
+  <p>Бесплатный онлайн курс</p>
+  <p>(2 октября 2023 - 25 января 2024)</p>
 </article>
 
 
