--- a/src/components/front/front-edu/pages/elem-edu-dsr2024cpp.html
+++ b/src/components/front/front-edu/pages/elem-edu-dsr2024cpp.html
@@ -23,14 +23,14 @@
   <div class="anchor" id="konspekt"></div>
   <h2>Конспект лекций</h2>
 
-  <p><a href="dsr2024cpp/lec-1.html" class="js-dsr-lecture">Лекция 1 (16.09.2024)</a></p>
-  <p><a href="dsr2024cpp/lec-2.html" class="js-dsr-lecture">Лекция 2 (23.09.2024)</a></p>
-  <p><a href="dsr2024cpp/lec-3.html" class="js-dsr-lecture">Лекция 3 (7.10.2024)</a></p>
-  <p><a href="dsr2024cpp/lec-4.html" class="js-dsr-lecture">Лекция 4 (14.10.2024)</a></p>
-  <p><a href="dsr2024cpp/lec-5.html" class="js-dsr-lecture">Лекция 5 (21.10.2024)</a></p>
-  <p><a href="dsr2024cpp/lec-6.html" class="js-dsr-lecture">Лекция 6 (5.11.2024)</a></p>
-  <p><a href="dsr2024cpp/lec-7.html" class="js-dsr-lecture">Лекция 7 (11.11.2024)</a></p>
-  <p><a href="dsr2024cpp/lec-8.html" class="js-dsr-lecture">Лекция 8 (18.11.2024)</a></p>
-  <p><a href="dsr2024cpp/lec-9.html" class="js-dsr-lecture">Лекция 9 (9.12.2024)</a></p>
+  <p><a href="lec-1.html" class="js-dsr-lecture">Лекция 1 (16.09.2024)</a></p>
+  <p><a href="lec-2.html" class="js-dsr-lecture">Лекция 2 (23.09.2024)</a></p>
+  <p><a href="lec-3.html" class="js-dsr-lecture">Лекция 3 (7.10.2024)</a></p>
+  <p><a href="lec-4.html" class="js-dsr-lecture">Лекция 4 (14.10.2024)</a></p>
+  <p><a href="lec-5.html" class="js-dsr-lecture">Лекция 5 (21.10.2024)</a></p>
+  <p><a href="lec-6.html" class="js-dsr-lecture">Лекция 6 (5.11.2024)</a></p>
+  <p><a href="lec-7.html" class="js-dsr-lecture">Лекция 7 (11.11.2024)</a></p>
+  <p><a href="lec-8.html" class="js-dsr-lecture">Лекция 8 (18.11.2024)</a></p>
+  <p><a href="lec-9.html" class="js-dsr-lecture">Лекция 9 (9.12.2024)</a></p>
 </article>
 
