--- a/src/components/alg/alg-conspect/fatin/pages/elem-fatin-11.html
+++ b/src/components/alg/alg-conspect/fatin/pages/elem-fatin-11.html
@@ -2,8 +2,9 @@
 
 
 <article class="article">
-  <p>Конспект видео от 2024-08-25</p>
-  <h4>Хеш-таблица на мемах за 2 часа 30 минут и 9 секунд</h4>
+  <p>Конспект двух видео от</p>
+  <p>Первое видео 2024-08-25 <strong>Хеш-таблица на мемах за 2 часа 30 минут и 9 секунд</strong></p>
+  <p>Второе видео <strong>Хеш-таблица</strong></p>
 
   <p><a href="https://www.youtube.com/@fatin.maksim/videos">youtube Максим Фатин</a></p>
   <p><a href="https://tskills.ru/algo">https://tskills.ru/algo</a></p>
@@ -16,12 +17,16 @@
 
   <p><a href="#about">План на стрим</a></p>
   <p><a href="#hash">Хэш-таблица</a></p>
-  <p><a href="#sort">Сортировки</a></p>
   <p><a href="#jun">Хеш-таблица Junior</a></p>
   <p><a href="#task1">Задача 1. Топ К часто встречающихся элементов</a></p>
   <p><a href="#mid">Хеш-таблица Middle</a></p>
   <p><a href="#task2">Задача 2. Изоморфные строки</a></p>
   <p><a href="#sen">Хеш-таблица Senior</a></p>
+  <p><a href="#task3">Задача 3. Сумма двух чисел</a></p>
+  <p><a href="#task4">Задача 4. Правильное судоку</a></p>
+  <p><a href="#task5">Задача 5. Симметричная прямая</a></p>
+  <p><a href="#task6">Задача 6. LRU кэш</a></p>
+  <p><a href="#task7">Задача 7. Префикс общих элементов двух массивов</a></p>
 </article>
 
 
@@ -114,52 +119,6 @@
     <li>Не знает как делать битовые оптимизации при работе с хеш-таблицей и не может глубоко погружаться в детали на собесе</li>
     <li>Знает как решать почти все задачи на собесе, но тратит много времени из-за незнания паттернов</li>
     <li>Забывает решение задачек</li>
-  </ol>
-</article>
-
-
-<!-- Сортировки -->
-<article class="article">
-  <div class="anchor" id="sort"></div>
-  <h3>Сортировки</h3>
-
-  <ol>
-    <li>
-      <h4>Квадратичные</h4>
-      <p>Например, bubble sort, gnome sort</p>
-      <p>Сложность во времени O(n<sup>2</sup>)</p>
-      <p>Сложность по памяти O(1)</p>
-      <p>Есть только один case когда нужна квадратичная сортировка на собесе. Это если нужно что-то сделать без дополнительной памяти и на входе большое количество уникальных элементов.</p>
-    </li>
-    <li>
-      <h4>Логарифмические</h4>
-      <p>Например, quick sort, merge sort, team sort</p>
-      <p>Сложность по времени O(nlogn)</p>
-      <p>Сложность по памяти O(logn)</p>
-      <p>В худшем случае сложность по времени O(n<sup>2</sup>) и это зависит от выбора pivot. pivot это опорный элемент вокруг которого будет происходить swap (перестановка)</p>
-      <p>В худшем случае сложность по памяти O(n) и это зависит от компаратора</p>
-      <p>Используются когда заранее ничего не известно о входных данных - много ли входных данных, сколько уникальных элементов. Они универсальный инструмент.</p>
-    </li>
-    <li>
-      <h4>Сортировка подсчетом</h4>
-      <p>Например, count sort</p>
-      <p>Сложность по времени O(n)</p>
-      <p>Сложность по памяти O(n)</p>
-      <p>Применяют только при небольшом количестве уникальных элементов</p>
-    </li>
-    <li>
-      <h4>Сортировка + массив</h4>
-      <ol>
-        <li>
-          <h4>Работа с интервалами</h4>
-          <p>Обычно интервалы в задачи приходят не отсортированные. Для того чтобы решить их <strong>паттерном точек</strong>, нужно сначала их отсортировать</p>
-        </li>
-        <li>
-          <h4>Сортировка событий</h4>
-          <p>Для событий самая сложная часть задачи это придумать компаратор (то, как сравнивать элементы)</p>
-        </li>
-      </ol>
-    </li>
   </ol>
 </article>
 
@@ -470,18 +429,24 @@ public:
   <div class="anchor" id="task2"></div>
   <h3>Задача 2. Изоморфные строки</h3>
 
+  <h4>Leetcode 205. Isomorphic Strings</h4>
+
   <p>Даны две строки s и t, определите, являются ли они изоморфными</p>
 
   <p>Две строки s и t изоморфны, если символы в s можно заменить, чтобы получить t</p>
   <p>Все вхождения символа должны быть заменены другим символом с сохранением порядка символов. Никакие два символа не могут отображаться в один и тот же символ, но символ может отображаться сам на себя</p>
 
   <h4>Пример 1</h4>
-  <code>Input: s = "abacaba", t = "totxtot"</code>
+  <code>Input: s = "egg", t = "add"</code>
   <code>Output: true</code>
 
   <h4>Пример 2</h4>
   <code>Input: s = "foo", t = "bar"</code>
   <code>Output: false</code>
+
+  <h4>Пример 3</h4>
+  <code>Input: s = "paper", t = "title"</code>
+  <code>Output: true</code>
 
   <h4>Идея решения</h4>
   <p>Для каждой строки заведем свой словарь. И будем запоминать какая буква одной строки соответствует какой букве другой строки. Если какая-то буква не соответствует, то будем возвращать false</p>
@@ -649,5 +614,321 @@ class Solution {
     <li>Может реализовать хеш-таблицу на массивах</li>
     <li>Может реализовать хеш-таблицу на  int-ах</li>
   </ul>
+</article>
+
+
+<!-- Задача 3. Сумма двух чисел -->
+<article class="article">
+  <div class="anchor" id="task3"></div>
+  <h3>Задача 3. Сумма двух чисел</h3>
+
+  <h4>Leetcode 1. Two Sum</h4>
+
+  <p>Дан целочисленный массив nums и целое число target. Вернуть индексы двух чисел, которые в сумме дают target.</p>
+  <p>Каждый ввод будет иметь только одно решение и нельзя использовать один элемент дважды</p>
+  <p>Вернуть ответ в любом порядке</p>
+
+  <h4>Пример 1</h4>
+  <code>nums = [2,7,11,15], target = 9</code>
+  <code>Output: [0,1]</code>
+
+  <h4>Пример 2</h4>
+  <code>nums = [3,2,4], target = 6</code>
+  <code>Output: [1,2]</code>
+
+  <h4>Пример 3</h4>
+  <code>nums = [3,3], target = 6</code>
+  <code>Output: [0,1]</code>
+
+  <h4>Паттерн хеш-таблица ключ-значение</h4>
+  <p>Создадим словарь dict = {}</p>
+  <p>Перебираем массив и заполняем словарь. Ключом делаем текущее число, а значением - его индекс в массиве.</p>
+  <p>Проверяем если в словаре уже есть ключ равный target - nums[i], значит текущее число в сумме с nums[i] дает target. Их индексы и записываем в ответ</p>
+  <p>Сложность по времени O(N)</p>
+  <p>Сложность по памяти O(N)</p>
+
+  <details>
+    <summary>Код на python</summary>
+<pre>
+class Solution:
+  def twoSum(self, nums: List[int], target: int) -> List[int]:
+  # ключ - число, значение - индекс
+  dict = {}
+  for i, first_num in enumerate(nums):
+    # first_num + second_num = target
+    second_num = target - first_num
+    if second_num in dict:
+      return (dict[second_num], i)
+    dict[first_num] = i
+
+  return []
+</pre>
+  </details>
+</article>
+
+
+<!-- Задача 4. Правильное судоку -->
+<article class="article">
+  <div class="anchor" id="task4"></div>
+  <h3>Задача 4. Правильное судоку</h3>
+
+  <h4>Leetcode 36. Valid Sudoku</h4>
+
+  <p>Определить что судоку размером 9х9 валидный. Только заполненные поля нужно валидировать согласно следующим правилам</p>
+  <ol>
+    <li>Каждый ряд состоит из цифр 1-9 без повторов</li>
+    <li>Каждый столбец состоит из цифр 1-9 без повторов</li>
+    <li>Каждый из девяти 3х3 квадратов состоит из цифр 1-9 без повторов</li>
+  </ol>
+
+  <p>Примечание. Судоку должен быть валидным, но не обязательно иметь решение</p>
+  <p>Только изначально заполненные цифры нужно валидировать</p>
+
+  <h4>Пример 1</h4>
+<pre>
+-----------------------
+5 3   |   7   |       |
+6     | 1 9 5 |       |
+  9 8 |       |   6   |
+------|-------|-------|
+ 8    |   6   |     3 |
+ 4    | 8   3 |     1 |
+ 7    |   2   |     6 |
+------|-------|-------|
+  6   |       | 2 8   |
+      | 4 1 9 |     5 |
+      |   8   |   7 9 |
+-----------------------
+</pre>
+<pre>
+Input: board = [
+  ["5", "3", ".", ".", "7", ".", ".", ".", "."],
+  ["6", ".", ".", "1", "9", "5", ".", ".", "."],
+  [".", "9", "8", ".", ".", ".", ".", "6", "."],
+  ["8", ".", ".", ".", "6", ".", ".", ".", "3"],
+  ["4", ".", ".", "8", ".", "3", ".", ".", "1"],
+  ["7", ".", ".", ".", "2", ".", ".", ".", "6"],
+  [".", "6", ".", ".", ".", ".", "2", "8", "."],
+  [".", ".", ".", "4", "1", "9", ".", ".", "5"],
+  [".", ".", ".", ".", "8", ".", ".", "7", "9"],
+]
+</pre>
+  <code>Output: true</code>
+
+  <h4>Паттерн хеш-таблица</h4>
+  <p>Для валидации чисел можно использовать хеш-таблицу. Чтобы отдельно валидировать каждую строку, каждый столбец, каждый квадрат 3х3 нужно 27 хеш-таблиц</p>
+
+  <details>
+    <summary>Код на python</summary>
+<pre>
+class Solution:
+  def isValidSudoku(self, board: List[List[str]]) -> bool:
+    # тут храним пару (номер строки, значение)
+    rows = set()
+    # тут храним пару (номер колонки, значение)
+    cols = set()
+    # тут храним пару (номер блока, значение)
+    blocks = set()
+    for i in range(len(board)):
+      for j in range(len(board[0])):
+        val = board[i][j]
+        if val == ".":
+          continue
+        blockIdx = (i // 3) * 3 + (j // 3)
+        # если у нас есть такой элемент
+        # в строке, столбце, блоке
+        # значит невалидное судоку
+        if (i, val) in rows or (j, val) in cols or (blockIdx, val) in blocks:
+          return False
+        rows.add((i, val))
+        cols.add((j, val))
+        blocks.add((blockIdx, val))
+
+    return True
+</pre>
+  </details>
+</article>
+
+
+<!-- Задача 5. Симметричная прямая -->
+<article class="article">
+  <div class="anchor" id="task5"></div>
+  <h3>Задача 5. Симметричная прямая</h3>
+
+  <h4>Leetcode 356. Line Reflection (premium)</h4>
+
+  <p>Даны n точек в двумерной системе координат. Можно ли провести вертикальную прямую, параллельную оси y, такую чтобы относительно нее точки были симметричные</p>
+  <p>Симметричность означает что все точки разбиты на пары у которых одинаковая координата y и одинаковая удаленность по оси x от искомой вертикальной прямой.</p>
+
+  <h4>Пример 1</h4>
+  <code>points = [[1, 1], [-1,1]]</code>
+  <code>Output: true</code>
+
+  <h4>Идея решения</h4>
+  <p>Если такая линия существует то она может быть только в одном месте - пересекать ось х в точке равноудаленной от самой правой и от самой левой точки</p>
+  <code>lineX = (minX + maxX) / 2</code>
+  <p>Если перебрать все точки левее lineX, то у каждой точки с координатами (pointLX, pointLY) должна быть пара той же высоты (координата y) правее lineX с координатами (pointRX, pointLY)</p>
+  <code>pointRX = 2*lineX - pointLX</code>
+  <p>Сложность по времени O(N)</p>
+  <p>Сложность по памяти O(N)</p>
+
+  <details>
+    <summary>Код на python</summary>
+<pre>
+class Solution:
+  def isReflected(self, points: List[List[int]]) -> bool:
+    # находим минимальный и максимальный x
+    maxX = max(x for x, y in points)
+    minX = min(x for x, y in points)
+    # avgX = (maxX + minX) / 2
+
+    # создадим словарь, чтобы проверять наличие точки за O(1)
+    points = {(x, y) for x, y in points}
+    for x, y in points:
+      # maxX + minX - x = 2 * avgX - x
+      # чтобы проходило тесты с [[0, 0], [1, 0]]
+      # (2 * avgX - x) формула нахождения парной координаты
+      # если есть minX = 1, maxX = 5, а текущий x = 2,
+      # то 2 * avgX - x = 4
+      if (maxX + minX - x, y) not in points:
+        return False
+
+    return True
+</pre>
+  </details>
+  <p>Это решение не учитывает случае, когда могут быть точки с одинаковыми коорданатами. Это значит что не укаждой точки есть свободная пара. Чтобы учитывать этот случай, надо использовать не set (только уникальные значения), а map где ключем будет точка, а значением - сколько раз она встречается. Найденные пары точек из map удалять. А в конце посмотреть остались ли точки в map? Если остались, то не укаждой точки нашлась пара.</p>
+</article>
+
+
+<!-- Задача 6. LRU кэш -->
+<article class="article">
+  <div class="anchor" id="task6"></div>
+  <h3>Задача 6. LRU кэш</h3>
+
+  <h4>Leetcode 146. LRU Cache (medium)</h4>
+
+  <p>Построить структуру данных, которая соостветствует LastRecently Used (LRU) cache</p>
+  <p>Имплементировать LRUCash class</p>
+  <ol>
+    <li>LRUCache(int capacity) инициализирует LRU Cache положительным размером capacity</li>
+    <li>int get(int key) возвращает значение ключа, если ключ существует, иначе возвращает -1</li>
+    <li>void put(int key, int value) обновляет значение ключа если ключ сучествует. Если такого ключа нет, то добавляет пару ключ-значение в кеш. Если номер ключа превышает capacity, то заменяет наименее часто использовавшийся ключ</li>
+  </ol>
+  <p>Функции get, put должны работать за O(1) в среднем</p>
+
+  <h4>Пример 1</h4>
+  <code>["LRUCashe", "put", "put", "get", "put", "get", "put", "get", "get", "get"]</code>
+  <code>[[2], [1, 1], [2, 2], [1], [3, 3], [2], [4, 4], [1], [3], [4]]</code>
+  <code>Output: [null, null, null, 1, null, -1, 3, 4]</code>
+  <h4>Объяснение</h4>
+  <code>LRUCache(2) // new LRUCache(2)</code>
+  <code>LRUCashe.put(1,1) // cache is {1:1}</code>
+  <code>LRUCashe.put(2,2) // cache is {1:1, 2:2}</code>
+  <code>LRUCache.get(1) // return 1</code>
+
+  <h4>Политика обновления кеша</h4>
+  <p>Например, у нас есть кеш размером 3 элемента. Нам нужно записать в него новый четвертый элемент. Какой мы удалим, чтобы освободить место под новую пару ключ-значение? Выбор элемента для удаления это и есть политика обновления кеша. </p>
+  <p>LRU (Last Recently Used) наиболее давно использованный. для его реализации нужен двусторонний связный список и хеш-таблица. Каждый ключ в хеш-таблице будет иметь значение, которое указывает на узел в связном списке и при обращении к ключу узел всегда будет ставиться в конец списка, как последний использованный.</p>
+</article>
+
+
+<!-- Задача 7. Префикс общих элементов двух массивов -->
+<article class="article">
+  <div class="anchor" id="task7"></div>
+  <h3>Задача 7. Префикс общих элементов двух массивов</h3>
+
+  <h4>Leetcode 2657. Find the Prefix Common Array of Two Arrays (medium)</h4>
+
+  <p>Даны два целочисленных массива с пермутацией A и B длиной n. Вернуть префиксный массив. В котором каждый элемент это число одинаковых элементов в префиксах двух массивов A и B.</p>
+  <p>Последовательность из n целых чисел называется с пермутацией если состоит из всех целых чисел от 1 до n, встречающихся ровно один раз</p>
+
+  <h4>Пример 1</h4>
+  <code>A = [1,3,2,4], B = [3,1,2,4]</code>
+  <code>Output: [0,2,3,4]</code>
+
+  <h4>Пример 2</h4>
+  <code>A = [2,3,1], B = [3,1,2]</code>
+  <code>Output: [0,1,3]</code>
+  <p>В решении 1 пересечение множеств находим через пересечение set. Лучший случай O(N), худший случай O(N<sup>2</sup>)</p>
+
+  <details>
+    <summary>Решение 1 на python</summary>
+<pre>
+class Solution:
+  def findPrefix(self, A: List[int], B: List[int]) -> List[int]:
+    setA = set()
+    setB = set()
+    result = []
+
+    for i in range(len(A)):
+      setA.add(A[i])
+      setB.add(B[i])
+
+      commonElementsCount = len(setA.intersection(setB))
+      result.append(commonElementCount)
+
+    return result
+</pre>
+  </details>
+
+  <p>В решении 2 оптимизируем нахождение пересечения. Мы set поменяли на массивы, поэтому худший случай O(N)</p>
+
+  <details>
+    <summary>Решение 2 на python</summary>
+<pre>
+class Solution:
+  def findPrefix(self, A: List[int], B: List[int]) -> List[int]:
+    setA = [False for _ in range(len(A) + 1)]
+    setB = [False for _ in range(len(B) + 1)]
+    result = []
+
+    for i in range(len(A)):
+      setA[A[i]] = True
+      setB[B[i]] = True
+
+      # пересечение множеств
+      commonElementsCount = 0
+      for j in range(len(setA)):
+        commonElementsCount += int(setA[j] and setB[j])
+
+      result.append(commonElementsCount)
+    return result
+</pre>
+  </details>
+
+  <p>В решении 3 оптимизируем нахождение пересечения. Находим пересечение как манипуляции с битами поэтому сложность по времени O(1)</p>
+
+  <details>
+    <summary>Решение 3 на python</summary>
+<pre>
+class Solution:
+  def findPrefix(self, A: List[int], B: List[int]) -> List[int]:
+    setA = 0
+    setB = 0
+    result = []
+
+    for i in range(len(A)):
+      # тоже самое что и setA[A[i]] = True в прошлом решении
+      setA = setA | 1 &lt;&lt; A[i]
+      setB = setB | 1 &lt;&lt; B[i]
+
+      # пересечение множеств
+      commonElementsCount = 0
+      # setA & setB это пересечение множеств
+      # если setA = "101100"
+      # если setB = "111000"
+      # то setA & setB = "101000"
+      num = setA & setB
+
+      # в цикле считаем число единиц для числа setA & setB
+      # и таким образом понимаем сколько общих чисел
+      while num != 0:
+        commonElementsCount += num % 2
+        num //= 2
+
+      result.append(commonElementsCount)
+    return result
+</pre>
+  </details>
 </article>
 
